# agentic-coding-workshop

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: ws-gogogo.md  ws-spec-ears.md  ws-tdd-ears.md
backend/: AGENTS.md
backend/app/: database.py  main.py  models.py  prices.py  recommender.py  schemas.py  strompris_client.py
backend/app/routers/: pings.py  prices.py
backend/tests/: _template.py  conftest.py  test_health.py  test_pings.py  test_prices_endpoint.py  test_prices_fallback.py  test_prices_math.py  test_recommender.py  test_strompris_client.py  test_tomorrow_fetch.py
docs/: code-principles.md  warmup-mcp-server.md
frontend/: README.md  app.js  index.html
specs/ears/: electricity-price-charging-advisor-plan.md  electricity-price-charging-advisor.md  template-repo-initial-setup.md
