[project]
name = "agentic-coding-workshop"
version = "0.1.0"
description = "Template repo for the agentic-coding course — FastAPI + SQLite + vanilla JS smoke-test app."
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "ruff",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py313"

[tool.pytest.ini_options]
pythonpath = ["backend"]
